change the date

--- a/minutes/minutes_2019-09-13.md
+++ b/minutes/minutes_2019-09-13.md
@@ -1,4 +1,4 @@
-# Minutes 2019-09-12
+# Minutes 2019-09-13
 
 
 ## Agenda
@@ -9,6 +9,8 @@ _The agenda is to be created before the meeting. It should start with action ite
     * [done] Read some papers of GANs and how to apply GANs for detecting Incongruence between News Title and Body Text
     * [not started] go through the papers during the meeting
   - Questions that you would like to discuss
+  	* Which GANs we should use?
+  	* Which models we should use as baselines?
 
 ## Discussion notes
 
