update the minutes

--- a/minutes/minutes_2019-09-16.md
+++ b/minutes/minutes_2019-09-16.md
@@ -16,21 +16,21 @@ _The agenda is to be created before the meeting. It should start with action ite
 
 _Things that were discussed during the meeting._
 
-  - ...
-  - ...
+  - Discussed paper's ideas
+  - Dataset we can use
 
 
 ## Action items
 
 _Todos until the next meeting. The list should include the supervisor's todos, prefixed with [supervisor]._
 
-  - Todo1
-  - Todo2
-  - [supervisor] Todo3
+  - Try simple GAN to generate congruence/incongruence titles
+  - Data analysis: stats how many congruence/incongruence data, length of title/body, class imbalance ...
+  - [supervisor] Send link to data
 
 
 ## Next meeting
 
 _Time of the next meeting, as agreed upon._
-
+  - Inform later, prefer Monday 11AM
 YYYY-MM-DD HH:ii
