update the minutes

--- a/minutes/minutes_2019-09-16.md
+++ b/minutes/minutes_2019-09-16.md
@@ -26,11 +26,12 @@ _Todos until the next meeting. The list should include the supervisor's todos, p
 
   - Try simple GAN to generate congruence/incongruence titles
   - Data analysis: stats how many congruence/incongruence data, length of title/body, class imbalance ...
+  - Also explore clickbait dataset
   - [supervisor] Send link to data
 
 
 ## Next meeting
 
 _Time of the next meeting, as agreed upon._
-  - Inform later, prefer Monday 11AM
-YYYY-MM-DD HH:ii
+  - Prefer Monday 11AM on weekly basis
+  - 2019-09-30 HH:ii
