update minutes, script to create incongruity dataset

--- a/minutes/minutes_2019-10-01.md
+++ b/minutes/minutes_2019-10-01.md
@@ -16,15 +16,15 @@ _The agenda is to be created before the meeting. It should start with action ite
 
 _Things that were discussed during the meeting._
 
-  - 
+  - GAN & dataset with fake news challenge
 
 
 ## Action items
 
 _Todos until the next meeting. The list should include the supervisor's todos, prefixed with [supervisor]._
 
-  - 
-
+  - The author of "Detecting Incongruity Between News Headline and Body Text via a Deep Hierarchical Encoder" paper has replied with English dataset -> Explore this dataset
+  - Start implementing & writing
 
 ## Next meeting
 
