--- a/minutes/minutes_2019-11-01.md
+++ b/minutes/minutes_2019-11-01.md
@@ -6,9 +6,9 @@
 _The agenda is to be created before the meeting. It should start with action items from the last meeting, prefixed with a status flag: [done] / [in progress] / [not started]._
 
   - Action items from the previous meeting
-    * [done] access GPU server, try to run current GAN code on entire NELA dataset
+    * [done] access GPU server, try to run current GAN code on entire NELA dataset (https://github.com/sugoiii/detecting-incongruity-dataset-gen)
     * [in progress] Try Glove embedding
-    * [in progress] Modify LeakGAN to generate headings
+    * [in progress] Modify LeakGAN to generate headings, based on https://pdfs.semanticscholar.org/d101/d8f3a3cf2782ead5ff2e52f4443172833786.pdf
 
 ## Discussion notes
 
